# SPDX-FileCopyrightText: 2024 Luflosi <zonewatch@luflosi.de>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "zonewatch"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-write-file = { version = "0.2", features = ["unnamed-tmpfile"] }
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
env_logger = "0.11"
futures = "0.3"
indoc = "2.0"
log = "0.4"
notify = "8.0"
serde = "1.0"
serde_derive = "1.0"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "warn"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
print_stdout = "warn"
unwrap_used = "warn"
use_debug = "warn"
